# NiflectSampleAoS2SoA

./: README.md
.github/workflows/: Linux.yml  Windows.yml
Project/AoS2SoA/: CMakeLists.txt
Project/Oopecs/: CMakeLists.txt
Source/AoS2SoA/include/ECS/: Movement.h  RigidBodyComponent.h  TransformComponent.h  Vector3.h
Source/AoS2SoA/include/OOP/: RigidBodyComponent.h  TransformComponent.h  Vector3.h
Source/AoS2SoA/src/: AccessorSetting.h  Main.cpp
Source/AoS2SoA/src/ECS/: ArchetypeAndFieldBindings.h  Component.h  Node.h  System.h
Source/AoS2SoA/src/ECS/Accessor/: ArchecomponentHandleAccessor.h
Source/AoS2SoA/src/OOP/: Component.h  Movement.h
Source/AoS2SoA/src/OOP/Accessor/: Vector3Accessor.cpp  Vector3Accessor.h
Source/Oopecs/include/ECS/: RigidBodyComponent.h  TransformComponent.h  Vector3.h
Source/Oopecs/include/OOP/: RigidBodyComponent.h  TransformComponent.h
Source/Oopecs/src/: AccessorSetting.h  Main.cpp
Source/Oopecs/src/Accessor/: Vector3Accessor.cpp  Vector3Accessor.h
Source/Oopecs/src/ECS/: AosSoaBinder.h  Archecomponent.h  ArchecomponentHandle.cpp  ArchecomponentHandle.h  ArchetypeAndFieldBindings.h  Component.h  ComponentBufferElementRef.cpp  ComponentBufferElementRef.h  ComponentHandle.cpp  ComponentHandle.h  Movement.h  Node.h  System.h
Source/Oopecs/src/ECS/Accessor/: ArchecomponentHandleAccessor.h  ComponentHandleAccessor.h  Vector3Accessor.cpp  Vector3Accessor.h
Source/Oopecs/src/Math/: Vector3.h
Source/Oopecs/src/OOP/: Component.h  Movement.h  Node.h
Source/Oopecs/src/OOP/Accessor/: Vector3Accessor.cpp  Vector3Accessor.h
